--- a/src/components/WeatherPage.css
+++ b/src/components/WeatherPage.css
@@ -15,3 +15,17 @@
     float: left;
     height: calc(25px + 2vmin);
 }
+
+.card-carousel {
+    align-content: center;
+    width: 70vw;
+    max-width: 870px;
+}
+
+.card-carousel div {
+    cursor: pointer;
+}
+
+.table-head {
+    text-align: left;
+}
