--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,7 @@
 .App-header {
   background-color: #87ceeb;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
