--- a/src/components/WeatherPage.css
+++ b/src/components/WeatherPage.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
+    margin: 5vh;
 }
 
 .title h1 {
@@ -28,4 +29,5 @@
 
 .table-head {
     text-align: left;
+    margin: 5vh 0 2vh 0;
 }
