--- a/src/components/WeatherPage.css
+++ b/src/components/WeatherPage.css
@@ -31,3 +31,9 @@
     text-align: left;
     margin: 5vh 0 2vh 0;
 }
+
+.container {
+    align-content: center;
+    width: 70vw;
+    max-width: 870px;
+}
